# pointnet2_cpp

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
include/pointnet2/: cuda_utils.h  pointnet_backbone.h  utils.h  utils_group.h  utils_interpolation.h
script/: build_debug.sh  build_release.sh  make.sh
src/: pointnet_backbone.cpp
src/cuda/: utils_group_cuda.cpp  utils_group_cuda.cu  utils_interpolation_cuda.cpp  utils_interpolation_cuda.cu
src/pt/: utils_group_pt.cpp
test/include/: test.h
test/include/common/: camera_info.h  depth_img.h  depth_params.h  point.h  point_cloud.h  utils.h
test/src/: test.cpp
test/src/common/: camera_info.cpp  depth_img.cpp  depth_params.cpp  point.cpp  point_cloud.cpp  utils.cpp
